# Fine-tuning-DistilBERT

./: .gitignore  ARCHITECTURE.md  DATA_FORMAT.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  pyproject.toml  requirements.txt
config/: defaults.yaml  local.yaml
data/: data_loader.py  dataset.py  train.tsv  valid.tsv
model/: __init__.py  config.py  modeling.py
outputs/my_experiment/checkpoint-epoch-1/: config.json
outputs/onnx/run_01/: model_metadata.json
scripts/: export_onnx.py  inference_onnx.py  train.py
tests/: test_pipeline_unittest.py
training/: config.py  evaluate.py  optimizer.py  qa_metrics.py  trainer.py
