[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fine-tuning-distilbert"
version = "0.1.0"
description = "Fine-tuning pipeline for Vietnamese extractive QA with DistilBERT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "datasets>=2.14.0",
  "accelerate>=0.24.0",
  "pandas>=1.5.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3.0",
  "underthesea>=1.4.2",
  "pyvi>=0.1",
  "onnx>=1.14.0",
  "onnxruntime>=1.16.0",
  "optimum>=1.14.0",
  "tqdm>=4.66.0",
]

[project.scripts]
ft-train = "scripts.train:main"
ft-export-onnx = "scripts.export_onnx:main"
ft-inference-onnx = "scripts.inference_onnx:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*", "scripts*", "training*"]
